orval を使ったコード生成がよかった
